--- a/tennis_system_project/requirements.txt
+++ b/tennis_system_project/requirements.txt
@@ -1,13 +1,4 @@
-coverage==4.0.3
 Django==1.9.10
 django-bootstrap-toolkit==2.15.0
-django-jenkins==0.18.1
-pbr==1.8.1
-Pillow==3.4.1
-six==1.10.0
-stevedore==1.9.0
-uk-postcode-utils==0.1.0
-virtualenv==13.1.2
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.1
-xlrd==0.9.4
+django-registration-redux==1.4
+Pillow==3.4.2
